# SignUp-Verify-Login

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  erd.dot  manage.py  pyproject.toml  requirements.txt
accounts/: apps.py  choices.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_friendrequest.py  0003_alter_friendrequest_status.py
accounts/templates/accounts/: about.html  account_activation_email.html  activation_invalid.html  activation_success.html  login.html  signup.html
affiliate/: urls.py  views.py
affiliate/static/affiliate/assets/corporate/scripts/: back-to-top.js
affiliate/templates/affiliate/: shop-about.html  shop-account.html  shop-checkout.html  shop-contacts.html  shop-faq.html  shop-goods-compare.html  shop-index-header-fix.html  shop-index-light-footer.html  shop-index.html  shop-item.html  shop-privacy-policy.html  shop-product-list.html  shop-search-result.html  shop-shopping-cart-null.html  shop-shopping-cart.html  shop-standard-forms.html  shop-terms-conditions-page.html  shop-wishlist.html
techyonlogin/: asgi.py  settings.py  urls.py  wsgi.py
unique-store/: asgi.py  settings.py  urls.py  wsgi.py
